fix header shift

--- a/src/styles/plugins/plugins-rewrite.less
+++ b/src/styles/plugins/plugins-rewrite.less
@@ -26,11 +26,29 @@
   }
 }
 
+.fancybox-margin {
+  
+  .header {
+    
+    .header__wrapper {
+      position: relative;
+      left: -8.5px;
+    }
+  }
+  
+  .header--inner {
+    
+    .header__wrapper {
+      left: 0;
+    }
+  }
+}
+
 .fancybox-lock {
   
   .header__wrapper {
-    position: relative;
-    left: -8.5px;
+//    position: relative;
+//    left: -8.5px;
   }
     
   @media screen and (max-width: @screen-sm) {
